# vio_simulate

VINS-Course/: CMakeLists.txt
VINS-Course/config/: euroc_config.yaml
VINS-Course/include/: System.h  estimator.h  estimator_intric.h  feature_manager.h  parameters.h
VINS-Course/include/backend/: edge_imu.h  edge_reprojection.h  problem.h  problem.h_jin  vertex_pose.h
VINS-Course/src/: System.cpp  estimator.cpp  estimator_intric.cpp  feature_manager.cpp  parameters.cpp
VINS-Course/src/backend/: edge.cc  edge_imu.cc  edge_reprojection.cc  problem.cc  problem.cc_back  problem.cpp  vertex_pose.cc
VINS-Course/test/: Untitled-1.cpp  check_edge.cpp  get_imu.cpp  get_imu.h  run_euroc.cpp  run_sim.cpp
vio_data_simulation/: CMakeLists.txt
vio_data_simulation/main/: gener_alldata.cpp  untitled.cpp  vins_Simdata.cpp  vins_Simdata_bkp.cpp  vins_simdata_with_depth.cpp
vio_data_simulation/python_tool/: draw_trajcory.py  draw_trajcoryNoise.py
vio_data_simulation/src/: bkp0909.cpp  cmd  imu.cpp  imu.h  param.cpp  param.h  utilities.cpp  utilities.h
